# myna

./: .codebeatignore  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  cms.go  go.mod  go.sum  jinc.go  jinc.sh  jpki.go  jpki.sh  myna.go  myna.sh  pin.go  reader.go  requirements.txt  setup.py  tool.go  version.go
.github/: dependabot.yml
.github/workflows/: audit.yml  release.yml  test.yml
_exp/mynaqt/: about.go  cert.go  mynaqt.go  prompt.go
_exp/mynaui/: mynaui.go
_exp/rust/: Cargo.toml  README.md
_exp/rust/src/: apdu.rs  jpki.rs  main.rs  reader.rs  text.rs  utils.rs
_go/: README.md  go.mod  main.go  myna.sh
_go/ci/: myna-build-linux-amd64.sh  myna-build-windows-x64.sh
_go/cmd/: jpki.go  jpki_cms.go  root.go  text.go
_go/libmyna/: apdu_test.go  api.go  jpki_ap.go  reader.go  text_ap.go  visual_ap.go
asn1/: asn1.go
ci/: myna-build-linux-amd64.sh  myna-build-windows-x64.sh
cmd/: card.go  image.go  jpki.go  jpki_cms.go  pin.go  root.go  test.go  text.go  tool.go  visual.go
driver/: driver.go  reader.go
exp/mynag/: Makefile  README.md  mynag.go
exp/mynaui/: Makefile  mynaui.go
fido/: Cargo.toml  README.md  install.sh
fido/extension/: background.js  manifest.json
fido/extension/account-select/: account-select.html  account-select.js
fido/extension/approval/: approval.html  approval.js
fido/extension/error/: error.html  error.js
fido/src/: main.rs
jpki/: __main__.py  app.py
libmyna/: ap.go  apdu.go  api.go  card_info_ap.go  card_input_helper_ap.go  common.go  errors.go  image_ap.go  jpki_ap.go  reader.go  text_ap.go  utils.go  validate.go  version.go
mpa/: Cargo.toml  README.md  install.sh
mpa/extension/: .manifest.json.swp  background.js  content.js  error-dialog.html  error-dialog.js  manifest.json  pin-dialog.html  pin-dialog.js  popup.css  popup.html  popup.js  windows.js
mpa/src/: check.rs  main.rs
mynag/: Makefile  bindata.go  mynag.go
mynaqt/: Makefile  cms.go  mynaqt.go
python/jpki/: __main__.py
src/: apdu.rs  ber.rs  check.rs  cli.rs  color.rs  error.rs  jpki.rs  lib.rs  main.rs  pdf.rs  pin.rs  pkcs7.rs  prompt.rs  reader.rs  ta.rs  test.rs  text.rs  text_ap.rs  unknown.rs  utils.rs  verify.rs  visual.rs  visual_ap.rs
src/reader/: dummy.rs
src/ta/: auth_ca_2015.pem  auth_ca_2023.pem  sign_ca_2015.pem  sign_ca_2023.pem
tests/: gen_fixtures.sh
tests/fixtures/: auth_ca_cert.der  auth_cert.der  auth_key.pem  sign_ca_cert.der  sign_cert.der  sign_key.pem
