[package]
name = "myna"
version = "0.6.4"
edition = "2024"

[dependencies]
asn1-rs = "0.7.1"
clap = { version = "4.5.60", features = ["cargo", "derive"] }
flate2 = "1"
hex = "0.4.3"
log = "0.4.29"
openssl = { version = "0.10.75", features = ["vendored"] }
pcsc = "2.9.0"
libc = "0.2"
fern = "0.7.1"

[workspace]
members = ["mpa"]
