[package]
name = "myna"
version = "0.6.4"
edition = "2024"

[dependencies]
asn1-rs = "0.7.1"
base16ct = { version = "1", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }
clap = { version = "4.5.60", features = ["cargo", "derive"] }
flate2 = "1"
log = "0.4.29"
openssl = { version = "0.10.76", features = ["vendored"] }
pcsc = "2.9.0"
libc = "0.2"
fern = "0.7.1"

[features]
dummy = []

[workspace]
members = ["mpa"]
