[package]
name = "myna"
version = "0.6.4"
edition = "2024"

[dependencies]
base16ct = { version = "1", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }
clap = { version = "4.6.1", features = ["cargo", "derive"] }
cms = "0.2"
der = { version = "0.7", features = ["alloc", "derive", "pem"] }
flate2 = "1"
log = "0.4.29"
pcsc = "2.9.0"
rsa = { version = "0.9", features = ["sha1", "sha2", "hazmat"] }
libc = "0.2"
fern = "0.7.1"
sha1 = "0.10"
sha2 = "0.10"
spki = "0.7"
x509-cert = "0.2"

[features]
dummy = []

[workspace]
members = ["mpa"]
