[package]
name = "myna-fido"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "myna-fido"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
ed25519-dalek = "2"
fern = "0.7.1"
log = "0.4.29"
myna = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
