[package]
name = "myna"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-rs = "0.5.1"
clap = { version = "4.0.13", features = ["cargo", "derive"] }
colored = "2.0.0"
env_logger = "0.9.1"
hex = "0.4.3"
log = "0.4.17"
nom = "7.1.1"
openssl = { version = "0.10.42", features = ["vendored"] }
pcsc = "2.7.0"
rpassword = "7.1.0"
base64 = "0.21"
