[package]
name = "myna"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-rs = "0.5.2"
clap = { version = "4.5.60", features = ["cargo", "derive"] }
colored = "2.2.0"
env_logger = "0.9.3"
hex = "0.4.3"
log = "0.4.29"
openssl = { version = "0.10.75", features = ["vendored"] }
pcsc = "2.9.0"
libc = "0.2"
